[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Script/LDL/Mosaic.gd" id="1"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="2"]
[ext_resource type="Texture2D" uid="uid://dc0dbvpblddrm" path="res://Art/Game_2/Ldl/215.png" id="3"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dpssjrlkhjgix" path="res://Art/LDL/173.png" id="5"]
[ext_resource type="Texture2D" uid="uid://be4vhehdc4mkf" path="res://Art/MagicWeapon/68.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cepttdqbtggkg" path="res://Art/MagicWeapon/70.png" id="7"]

[node name="Mosaic" type="Node2D"]
script = ExtResource( "1" )

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.976471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 32
text = "宝石镶嵌"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="bs_1" type="Sprite2D" parent="."]
position = Vector2(50, 156)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="bs_1" parent="bs_1" instance=ExtResource( "4" )]
offset_left = -26.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="bs_2" type="Sprite2D" parent="."]
position = Vector2(150, 50)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="bs_2" parent="bs_2" instance=ExtResource( "4" )]
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="bs_3" type="Sprite2D" parent="."]
position = Vector2(250, 160)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="bs_3" parent="bs_3" instance=ExtResource( "4" )]
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="bs_4" type="Sprite2D" parent="."]
position = Vector2(150, 265)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="bs_4" parent="bs_4" instance=ExtResource( "4" )]
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="zb" type="Sprite2D" parent="."]
position = Vector2(150, 158)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Zb" parent="zb" instance=ExtResource( "4" )]
offset_left = -26.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
metadata/_edit_lock_ = true

[node name="Help" type="TextureButton" parent="."]
offset_left = 51.0
offset_top = 26.0
offset_right = 91.0
offset_bottom = 66.0
texture_normal = ExtResource( "6" )
texture_pressed = ExtResource( "6" )
texture_hover = ExtResource( "7" )
texture_disabled = ExtResource( "6" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="Help" to="." method="_on_help_pressed" flags=18]
